Updates css to make sure mobile menus have contrast

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -98,10 +98,12 @@
 
 //  TODO: this may be updated in a future Login.gov design system release.
 // remove this if/when it is.
-.usa-nav__primary button {
-  &[aria-expanded='true'] {
-    &:hover {
-      background-color: $theme-color-primary-darker;
+@include at-media($theme-header-min-width) {
+  .usa-nav__primary button {
+    &[aria-expanded='true'] {
+      &:hover {
+        background-color: $theme-color-primary-darker;
+      }
     }
   }
 }
